@@ -1,0 +1,6 @@
+services:
+  Cobweb\ExternalimportTut\EventListener\InsertRecordPreprocess:
+    tags:
+      - name: event.listener
+        identifier: 'insertRecordPreprocessor'
+        event: Cobweb\ExternalImport\Event\InsertRecordPreprocessEvent
