@@ -1,3 +1,8 @@
+2021-10-04 Francois Suter (Idéative)  <typo3@ideative.ch>
+
+	* Ensure compatibility with upcoming External Import 6.0.0
+	* Replace example hook by event
+
 2020-12-01 Francois Suter (Idéative)  <typo3@ideative.ch>
 
 	* Release version 3.0.1
